...
  Widget build(BuildContext context, WidgetRef ref) {
    final List<Map<String, dynamic>> navItems = [
      {'icon': Icons.home_outlined, 'activeIcon': Icons.home, 'label': 'Home'},
      {
        'icon': Icons.store_outlined,
        'activeIcon': Icons.store,
        'label': 'Pasar',
      },
      {
        'icon': Icons.payments_outlined,
        'activeIcon': Icons.payments,
        'label': 'Iuran',
      },
...
